force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>The Error Log object stores detailed records of exceptions and runtime errors encountered in Apex classes, triggers, flows, and integrations. It provides a centralized location for tracking, auditing, and diagnosing system issues in both sandbox and production environments.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ERROR-{0000000}</displayFormat>
        <label>Error Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>