force-app/main/default/objects/Error_Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>The name of the class where the error occurred.</description>
    <label>Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>