force-app/main/default/objects/Error_Log__c/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <description>The name of the method involved in the exception.</description>
    <label>Apex Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>