force-app/main/default/objects/Error_Log__c/fields/Context_Info__c.field-meta.xml
<CustomField>
    <fullName>Context_Info__c</fullName>
    <label>Context Info</label>
    <type>TextArea</type>
</CustomField>