force-app/main/default/objects/Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>A short, user-friendly description of the error.</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>