force-app/main/default/objects/Error_Log__c/fields/Record_Involved__c.field-meta.xml
<CustomField>
    <fullName>Record_Involved__c</fullName>
    <description>The Salesforce record ID associated with the error.</description>
    <label>Record Involved</label>
    <length>18</length>
    <type>Text</type>
</CustomField>